# Mavic_Warehouse_Autonomous

./: .gitignore
mavic_aero_interface/: CMakeLists.txt  package.xml
mavic_interface/mavic_transform_frames/: CMakeLists.txt  package.xml
mavic_interface/mavic_transform_frames/include/mavic_transform_frames/: mavic_transform_frames.h
mavic_interface/mavic_transform_frames/src/: mavic_transform_frames.cpp  mavic_transform_frames_node.cpp
mavic_interface_pkgs/mavic_freebots_mission/: CMakeLists.txt  package.xml
mavic_interface_pkgs/mavic_freebots_mission/scripts/: mavic_freebots_mission.py
mavic_interface_pkgs/mavic_interface/: CMakeLists.txt  package.xml
mavic_interface_pkgs/mavic_interface/launch/: mavic_interface.launch
mavic_interface_pkgs/mavic_interface/src/: mavic_command.cpp  mavic_image.cpp  mavic_state.cpp
mavic_interface_pkgs/mavic_interface/src/include/: mavic_command.h  mavic_image.h  mavic_state.h
mavic_interface_pkgs/mavic_interface_aerostack/: CMakeLists.txt  package.xml
mavic_interface_pkgs/mavic_interface_aerostack/include/mavic_interface_aerostack/mavic_state/: mavic_state.h
mavic_interface_pkgs/mavic_interface_aerostack/launch/: mavic_aerostack.launch
mavic_interface_pkgs/mavic_interface_aerostack/project/mission_takeoff_landing/: main_launcher.sh  mission_editor_launcher.sh
mavic_interface_pkgs/mavic_interface_aerostack/src/mavic_state/: mavic_state.cpp  mavic_state_node.cpp
mavic_interface_pkgs/mavic_interface_ros/: CMakeLists.txt  package.xml
mavic_interface_pkgs/mavic_interface_ros/config/: calibration_mavic.yaml  rviz.rviz  settings.yaml  tags.yaml
mavic_interface_pkgs/mavic_interface_ros/config/mission/: setup.sh
mavic_interface_pkgs/mavic_interface_ros/include/mavic_interface_ros/mavic_dunker_pose/: mavic_dunker_pose.h
mavic_interface_pkgs/mavic_interface_ros/include/mavic_interface_ros/mavic_interface_aerostack/mavic_optimized_localization/: mavic_optimized_localization.h
mavic_interface_pkgs/mavic_interface_ros/include/mavic_interface_ros/mavic_interface_aerostack/mavic_state/: mavic_state.h
mavic_interface_pkgs/mavic_interface_ros/include/mavic_interface_ros/mavic_optimized_frames/: mavic_optimized_frames.h
mavic_interface_pkgs/mavic_interface_ros/include/mavic_interface_ros/mavic_raw_localization/: mavic_raw_localization.h
mavic_interface_pkgs/mavic_interface_ros/include/mavic_interface_ros/mavic_receive_video/: mavic_receive_video.h
mavic_interface_pkgs/mavic_interface_ros/include/mavic_interface_ros/mavic_send_velocity_aircraft/: mavic_send_velocity_aircraft.h
mavic_interface_pkgs/mavic_interface_ros/include/mavic_interface_ros/mavic_send_waypoints_free_bot/: mavic_send_waypoints_free_bot.h
mavic_interface_pkgs/mavic_interface_ros/include/mavic_interface_ros/mavic_slam_gtsam/: mavic_slam_gtsam.h
mavic_interface_pkgs/mavic_interface_ros/include/mavic_interface_ros/mavic_transform_frames/: mavic_transform_frames.h
mavic_interface_pkgs/mavic_interface_ros/include/mavic_mission_State/: mavic_mission_State.h
mavic_interface_pkgs/mavic_interface_ros/launch/: detect_tags.launch  mavic.launch
mavic_interface_pkgs/mavic_interface_ros/project/mission_takeoff_landing/: main_launcher.sh  mission_editor_launcher.sh
mavic_interface_pkgs/mavic_interface_ros/project/mission_takeoff_landing/configs/mission/: behavior_catalog.yaml  behavior_tree_mission_file.yaml
mavic_interface_pkgs/mavic_interface_ros/src/mavic_dunker_pose/: mavic_dunker_pose.cpp  mavic_dunker_pose_node.cpp
mavic_interface_pkgs/mavic_interface_ros/src/mavic_interface_aerostack/mavic_optimized_localization/: mavic_optimized_localization.cpp  mavic_optimized_localization_node.cpp
mavic_interface_pkgs/mavic_interface_ros/src/mavic_interface_aerostack/mavic_state/: mavic_state.cpp  mavic_state_node.cpp
mavic_interface_pkgs/mavic_interface_ros/src/mavic_optimized_frames/: mavic_optimized_frames.cpp  mavic_optimized_frames_node.cpp
mavic_interface_pkgs/mavic_interface_ros/src/mavic_raw_localization/: mavic_raw_localization.cpp  mavic_raw_localization_node.cpp
mavic_interface_pkgs/mavic_interface_ros/src/mavic_receive_video/: mavic_receive_video.cpp  mavic_receive_video_node.cpp
mavic_interface_pkgs/mavic_interface_ros/src/mavic_send_velocity_aircraft/: mavic_send_velocity_aircraft.cpp  mavic_send_velocity_aircraft_node.cpp
mavic_interface_pkgs/mavic_interface_ros/src/mavic_send_waypoints_free_bot/: mavic_send_waypoints_free_bot.cpp  mavic_send_waypoints_free_bot_node.cpp
mavic_interface_pkgs/mavic_interface_ros/src/mavic_slam_gtsam/: mavic_slam_gtsam.cpp  mavic_slam_gtsam_node.cpp
mavic_interface_pkgs/mavic_interface_ros/src/mavic_transform_frames/: mavic_transform_frames.cpp  mavic_transform_frames_node.cpp
mavic_interface_pkgs/mavic_transform_frames/: CMakeLists.txt
mavic_interface_pkgs/mavic_transform_frames/src/: mavic_transform_frames.cpp
mavic_interface_pkgs/people_locator/: CMakeLists.txt  package.xml
mavic_interface_pkgs/people_locator/src/: people_locator.cpp
mavic_interface_pkgs/people_ray/: CMakeLists.txt  package.xml
mavic_interface_pkgs/people_ray/launch/: people_ray.launch
mavic_interface_pkgs/people_ray/src/: people_ray.cpp
